--- a/Figuras 2d en 3d/d2.html
+++ b/Figuras 2d en 3d/d2.html
@@ -1,7 +1,7 @@
 <html>
 
     <head>
-        <title>Box</title>
+        <title>Figuras 2d en 3d</title>
         <meta http-equiv="content-type" content="text/html; charset=ISO-8859-1">
         <script src="../gl-matrix.js"></script>
         <script type="module" defer src= myscript.js></script>
